internship-tasks/practicals/kubernetes/Task-4-7/production-postgres-k8s/05-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ayoob-postgres-networkpolicy
  namespace: ayoob-k-ibrahim
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: ayoob-postgres

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              access-db: "true"

    - from:
        - podSelector:
            matchLabels:
              cnpg.io/podRole: pooler

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system

    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: ayoob-postgres
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ayoob-monitoring
      ports:
        - protocol: TCP
          port: 9187
